--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.14.3",
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
+    "serverless-http": "^3.2.0",
     "validater": "^1.0.5",
     "vercel": "^42.3.0"
   }
